--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@ body.mobile-view h2 {
 
   <!-- Top-right VGST Logo and Text -->
   <div class="top-right">
-    <img src="govo.png" alt="VGST Logo" />
+    <img src="govo.jpg" alt="VGST Logo" />
     <span>Dept. of Science and Technology</span>
     <span>Govt. of Karnataka</span>
   </div>
