--- a/index.html
+++ b/index.html
@@ -200,6 +200,32 @@ body.mobile-view h2 {
   font-size: 1.4rem;
   text-align: center;
 }
+/* Make corner image responsive */
+body.mobile-view .corner-image {
+  width: 100px;
+  top: 10px;
+  left: 10px;
+  position: static; /* Remove absolute positioning */
+  margin-bottom: 10px;
+}
+
+/* Make top-right logos stack and reposition */
+body.mobile-view .top-right {
+  position: static;
+  flex-direction: row;
+  justify-content: center;
+  gap: 10px;
+  margin-bottom: 20px;
+}
+
+body.mobile-view .top-right img {
+  width: 50px;
+  height: 50px;
+}
+
+body.mobile-view .top-right span {
+  font-size: 12px;
+}
 
 
   </style>
@@ -319,5 +345,4 @@ body.mobile-view h2 {
 
 </body>
 </html>
-
 
